--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   
   # For synthetic sound generation
   audioplayers: ^6.0.0
+  flame: ^1.32.0
+  flame_audio: ^2.11.10
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +64,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/sounds/
+    - assets/audio/sounds/
+    - assets/fonts/Pixel Digivolve.otf
+    - assets/fonts/Pixel Digivolve Italic.otf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -75,12 +79,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Pixel Digivolve
+      fonts:
+        - asset: assets/fonts/Pixel Digivolve.otf
+        - asset: assets/fonts/Pixel Digivolve Italic.otf
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
