--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   audioplayers: ^6.0.0
   flame: ^1.32.0
   flame_audio: ^2.11.10
+  http: ^1.5.0
+  flutter_dotenv: ^6.0.0
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,7 @@ flutter:
     - assets/audio/sounds/
     - assets/fonts/Pixel Digivolve.otf
     - assets/fonts/Pixel Digivolve Italic.otf
+    - .env.local
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
