refactor: rename Digivice to WorkoutBuddy across all files and components

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "digivice",
-    "short_name": "digivice",
+    "name": "workoutbuddy",
+    "short_name": "workoutbuddy",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
