--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: digivice
+name: workoutbuddy
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -42,6 +42,11 @@ dependencies:
   http: ^1.5.0
   flutter_dotenv: ^6.0.0
   crypto: ^3.0.6
+  
+  # For local database storage
+  sqflite: ^2.4.1
+  path: ^1.9.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +72,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/audio/sounds/
+    - assets/audio/sounds/selectA.mp3
+    - assets/audio/sounds/selectB.mp3
+    - assets/audio/sounds/selectC.mp3
     - assets/fonts/Pixel Digivolve.otf
     - assets/fonts/Pixel Digivolve Italic.otf
     - .env.local
