--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   intl: ^0.20.2
+  flutter_health_connect: ^1.2.3
 
 dev_dependencies:
   flutter_test:
