--- a/devtools_options.yaml
+++ b/devtools_options.yaml
@@ -1,3 +1,7 @@
 description: This file stores settings for Dart & Flutter DevTools.
 documentation: https://docs.flutter.dev/tools/devtools/extensions#configure-extension-enablement-states
-extensions:
+extensions: []
+# Example: To enable or disable extensions, uncomment and edit:
+# extensions:
+#   - package: extension_name
+#     enabled: true
