--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path: ^1.9.0
   intl: ^0.20.2
   flutter_health_connect: ^1.2.3
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
