--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.20.2
   flutter_health_connect: ^1.2.3
   vector_math: ^2.1.4
+  health: ^13.2.1
 
 dev_dependencies:
   flutter_test:
