:see_no_evil: Ignore Plugin regirstration swift file

--- a/.gitignore
+++ b/.gitignore
@@ -49,5 +49,6 @@ app.*.map.json
 **/generated_plugin_registrant.h
 **/generated_plugins.cmake
 **/GeneratedPluginRegistrant.swift
+GeneratedPluginRegistrant.swift
 
 .env*
