--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,10 +65,11 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  #image_path: "assets/images/icon.png"
+  image_path: "assets/images/icon.png"
   min_sdk_android: 26
-  #adaptive_icon_background: "assets/images/adaptive_icon_background.png"
-  #adaptive_icon_foreground: "assets/images/adaptive_icon_foreground.png"
+  # Optional: For Android adaptive icons (recommended)
+  adaptive_icon_background: "assets/images/adaptive_icon_background.png"
+  adaptive_icon_foreground: "assets/images/adaptive_icon_foreground.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
